<resources>
    <string name="app_name">CalculateForMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CalculateForMe</string>
    <string name="nav_header_subtitle">hm.engineer039@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Summary</string>
    <string name="menu_slideshow">Images</string>
    <string name="balcony_radius">Balcony radius</string>
    <string name="service_balcony_radius">Balcony Radius</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Balcony Radius Calculations Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your Name</string>
    <string name="units_title">Measure Unit</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_balcony_radius2">BalconyRadius2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_balcony_radius">BalconyRadius</string>
    <string name="width">Width</string>
    <string name="date">Date</string>
    <string name="length">Length</string>
    <string name="radius">Radius</string>
    <string name="submit">Submit</string>
    <string name="balcony_width">Balcony Width</string>
    <string name="balcony_length">Balcony Length</string>
    <string name="cm">cm</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="unit_meter">m</string>
    <string name="unit_note">Note: you can change the Default unit from application settings</string>
    <string name="lang">Language</string>
    <string name="dialog_change_language_title">Change language</string>
    <string name="dialog_change_language_body">Are you sure you want to change application language?</string>
    <string name="ok" >OK</string>
    <string name="cancel">Cancel</string>
    <string name="english" >English</string>
    <string name="arabic">Arabic</string>
    <string name="no_operations_yet">You didn\'t do any operations yet.</string>
    <string name="reset">Reset</string>
</resources>