<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hmeng.calculateforme.ui.Fragments.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.hmeng.calculateforme.ui.Fragments.Summary.SummaryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.hmeng.calculateforme.ui.Fragments.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_slideshow" />
</navigation>