<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <RadioGroup
        android:id="@+id/rg_mark_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top|center"
        android:layout_marginTop="32dp">
        <RadioButton
            android:id="@+id/rb_unit_cm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cm"/>
        <RadioButton
            android:id="@+id/rb_unit_m"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/unit_meter"
            android:layout_marginLeft="32dp"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/ll_balcony_data_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="visible">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/balcony_width">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/balcony_length">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
            <RelativeLayout
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/submit" />

            </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="64dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Balcony Radius"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:textAppearance="?attr/textAppearanceHeadline1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/tv_radius_value"
            android:text=""
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/black"
            android:padding="15dp"
            android:gravity="center"
            android:background="@drawable/bg_btn"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_radius_unit"
                android:text="@string/cm"
                android:textSize="20sp"
                android:layout_marginLeft="4dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <Button
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:id="@+id/bt_reset_balcony_radius"
            android:background="@color/colorAccent"/>



    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>