<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:gravity="center_vertical"
    android:background="@android:color/white"
    android:orientation="horizontal"
    >


    <LinearLayout
        android:id="@+id/ll_item_exam_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
>

        <ImageView
            android:id="@+id/file_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:background="@mipmap/ic_pre_radius_item" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_exam_result_subjec_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:maxLines="2"
                android:text="@string/balcony_radius"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_balcony_radius_width_label"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/width"
                    style="@style/Widget.Plaid.Text.Labelling" />

                <TextView
                    android:id="@+id/tv_balcony_radius_width_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="12"
                    style="@style/Widget.Plaid.Text.Labelling" />

                <TextView
                    android:id="@+id/tv_balcony_radius_width_size_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="cm"
                    style="@style/Widget.Plaid.Text.Labelling" />

            </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_balcony_radius_length_label"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/length"
            style="@style/Widget.Plaid.Text.Labelling" />

        <TextView
            android:id="@+id/tv_balcony_radius_length_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="12"
            style="@style/Widget.Plaid.Text.Labelling" />

        <TextView
            android:id="@+id/tv_balcony_radius_length_size_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="cm"
            style="@style/Widget.Plaid.Text.Labelling" />

    </LinearLayout>
</LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_balcony_radius_result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginRight="8dp"
            android:text="@string/radius"
            style="@style/Widget.Plaid.Text.Labelling"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_balcony_radius_result_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="12"
            style="@style/Widget.Plaid.Text.Labelling" />

        <TextView
            android:id="@+id/tv_balcony_radius_result_size_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="cm"
            style="@style/Widget.Plaid.Text.Labelling"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginRight="10dp"
        >

        <TextView
            android:id="@+id/tv_balcony_radius_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="22dp"
            android:text="@string/date"
            style="@style/Widget.Plaid.Text.Labelling"/>

        <TextView
            android:id="@+id/tv_balcony_radius_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="12"
            style="@style/Widget.Plaid.Text.Labelling" />

    </LinearLayout>
</LinearLayout>
